# discounted_stocks

./: .gitignore  load-env.ps1  pyproject.toml  requirements.txt  vercel.json
_setup/: docker-compose.yml  init.sql
src/: all_stocks_list.csv  consts.py
src/dal_util/: db_conn.py  pg_db_conn.py  redis_conn.py  sqlite_db_conn.py
src/discounted_stocks/: discounted_stocks_server.py
src/stock_symbols/: save_stocks.py
src/stock_symbols/csvs/: ind_nifty500LargeMidSmallEqualCapWeighted_list.csv  ind_niftyIndiaFPI150_list.csv  ind_niftymidsmallcap400list.csv  ind_niftysmallcap250list.csv  ind_niftytotalmarket_list.csv
src/stocks_data_reader/: abstractions.py  factory.py  file_data_reader.py  sql_data_reader.py
